# python_quickstart

./: .env  README.md  Type_variable.py  pyproject.toml  test_cache2.py  test_getattr.py
abc/: abstractmethod_usage.py  uuid_usage.py
argparse_usage/: demo.py  sub_argparse.py
attribute_usage/: test_hasattr.py
base_data/: MyLinkedList.py  keyword.py  my_string.py  not&None.py  terminal_input.py  test_lambda.py  test_tuple.py
base_func/: any_usage.py  generator_usage.py  map_reduce_usage.py
class-knowledge/: README.md  class_method.py  contruct_polymorphism.py  static_method.py  test_as_dict.py  test_dataclass_v2.py  test_enum_class.py
dask_usage/: get.py  main.py
decoration/: test_functools_partial.py  test_lru_cache.py  wrapper_with_parameter.py
decoration_usage/: wrapper_classmethod.py  wrapper_property.py  wrapper_static_method.py  wrapper_time_counter.py  wrapper_type_assert.py
decoration_v1/: addFuncitonDynamically.py
design_pattern/: factory_method.py
fastapi_usage/: README.md  annotated_usage.py  cookie_para.py  field_usage.py  header_param.py  path_param.py  query_param.py  query_usage.py  request_body_param.py
gradio_usage/: README.md  gradio_log_usage.py  js_usage.py  output_time.py  show_image.py  test.py
iterator/: replace_while.py
logger_usage/: logger.py
mixin_usage/: loggerMixin.py  test_mixin.py
modules_usage/: README.md
pluggy_usage/: demo.py  dynamic_register.py
pydantic_usage/: README.md  field_serializer.py  field_validator.py  model_validator.py  test_basemodel_class.py  test_root_validator.py
pzc_review/: README.md
(+62 files in other folders)
