[tool.poetry]
name = "python-quickstart"
version = "0.1.0"
description = ""
authors = ["pengzhongchao <pengzhongchao@senseauto.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
opentelemetry-sdk = "^1.26.0"
opentelemetry-instrumentation-fastapi = "^0.47b0"
opentelemetry-api = "^1.26.0"
opentelemetry-exporter-prometheus = "^0.47b0"
gradio = "^4.39.0"
gradio-log = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
